# multi-uav-tracking

./: .dockerignore  .gitignore  Dockerfile  README.md
src/amav/: package.xml  setup.cfg  setup.py
src/amav/amav/: camera_node.py  coordinator_node.py  decision_node.py  detector_node.py  tracker_node.py
src/amav/config/: agent_params.yaml
src/amav/launch/: single_agent.launch.py
src/amav_bringup/: CMakeLists.txt  package.xml
src/amav_bringup/launch/: constrainted.launch.py  dev.launch.py  multi_agent.launch.py
src/amav_bringup/scripts/: visualize_detections.py
src/amav_bringup/worlds/: search_area.sdf
src/amav_interfaces/: CMakeLists.txt  package.xml
src/amav_interfaces/msg/: AgentStatus.msg  BoundingBox2D.msg  Detection.msg  DetectionArray.msg  TrackedObject.msg  TrackedObjectArray.msg
src/amav_interfaces/srv/: Handoff.srv
